# sceneNN_RGBD_publisher

./: .gitignore  CMakeLists.txt  package.xml
src/: my_publisher.cpp  sceneNN_colorimg_publisher.cpp  sceneNN_depth_publisher.cpp  sceneNN_seq_publisher.cpp
